--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: io
 description: A starting point for Dart libraries or applications.
 version: 0.0.1
-#author: Your Name <email@example.com>
-#homepage: https://www.example.com
+author: Jim Philbin <mailto:jfphilbin@gmail.com>
+homepage: https://opendicomweb.github.io
 
 environment:
   sdk: '>=1.0.0 <2.0.0'
