Fixes to make example read_a_directory wotk

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,10 @@ environment:
   sdk: '>=1.0.0 <2.0.0'
 
 dependencies:
-  odwsdk:
-    path: C:/odw/sdk/odwsdk
-  #date_time:
-  #  path: C:/odw/sdk/utils/date_time
+  convert:
+    path: C:/odw/sdk/convert
+  core:
+    path: C:/odw/sdk/core
   uuid:
     path: C:/odw/sdk/uuid
   path: any
