--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,42 @@
 name: io
 description: A starting point for Dart libraries or applications.
-version: 0.1.1
+version: 0.5.1
 author: Jim Philbin <mailto:jfphilbin@gmail.com>
 
 homepage: https://github.com/OpenDICOMweb/io
 
 environment:
-  sdk: ^1.0.0
+  sdk: ^1.21.0
 
 dependencies:
   args: any
-
-  # The I/O package can should only use the convert/aux.dart library.
-  # It should know as little as possible about DICOM.
-  dictionary:
-    path: C:/odw/sdk/dictionary
-    version: ^0.5.0
-  convertX:
-    path: C:/odw/sdk/convert
-    version: ^0.5.0
-  # The I/O package should not use core, but it may used dictionary/common
-  #core:
-  #  path: C:/odw/sdk/core
-  #  version: 0.4.1
   path: any
+  common:
+    git:
+      url: https://github.com/OpenDICOMweb/common
+      ref: develop
+      version: ^0.5.2
+   #   path: C:/odw/sdk/common
+   #   version: ^0.5.2
+  dictionary:
+    git:
+      url: https://github.com/OpenDICOMweb/dictionary
+      ref: develop
+      version: ^0.5.1
+    #  path: C:/odw/sdk/dictionary
+    #  version: ^0.5.1
+  core:
+    git:
+      url: https://github.com/OpenDICOMweb/core
+      ref: develop
+      version: ^0.5.1
+    #  path: C:/odw/sdk/core
+    #  version: ^0.5.1
 
 dev_dependencies:
   benchmark_harness: ^1.0.4
   grinder: ^0.8.0
-  test: ^0.12.0
+  test:  ^0.12.0
+
 
 
