--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,26 +12,26 @@ dependencies:
   args: any
   path: any
   common:
-    git:
-      url: https://github.com/OpenDICOMweb/common.git
-      ref: develop
+  #  git:
+  #    url: https://github.com/OpenDICOMweb/common.git
+  #    ref: develop
+  #    version: ^0.5.2
+      path: C:/odw/sdk/common
       version: ^0.5.2
-   #   path: C:/odw/sdk/common
-   #   version: ^0.5.2
   core:
-    git:
-      url: https://github.com/OpenDICOMweb/core.git
-      ref: develop
-      version: ^0.5.1
-    #  path: C:/odw/sdk/core
-    #  version: ^0.5.1
+  #  git:
+  #    url: https://github.com/OpenDICOMweb/core.git
+  #    ref: develop
+  #    version: ^0.5.1
+     path: C:/odw/sdk/core
+     version: ^0.5.1
   convertX:
-    git:
-      url: https://github.com/OpenDICOMweb/convert.git
-      ref: develop
-      version: ^0.5.0
-  #  path: C:/odw/sdk/core
-  #  version: ^0.5.1
+  #  git:
+  #    url: https://github.com/OpenDICOMweb/convert.git
+  #    ref: develop
+  #    version: ^0.5.0
+    path: C:/odw/sdk/convert
+    version: ^0.5.1
 
 dev_dependencies:
   benchmark_harness: ^1.0.4
