--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: io
 description: A starting point for Dart libraries or applications.
-version: 0.5.4
+version: 0.5.5
 author: Jim Philbin <mailto:jfphilbin@gmail.com>
 
 homepage: https://github.com/OpenDICOMweb/io
 
 environment:
-  sdk: ^1.24.1
+  sdk: ^1.24.2
 
 dependencies:
   args: any
@@ -17,21 +17,21 @@ dependencies:
   #    ref: develop
   #    version: ^0.5.2
       path: C:/odw/sdk/common
-      version: ^0.5.4
+      version: ^0.5.6
   core:
   #  git:
   #    url: https://github.com/OpenDICOMweb/core.git
   #    ref: develop
   #    version: ^0.5.1
      path: C:/odw/sdk/core
-     version: ^0.5.4
-  convertX:
+     version: ^0.5.6
+  dcm_convert:
   #  git:
   #    url: https://github.com/OpenDICOMweb/convert.git
   #    ref: develop
   #    version: ^0.5.0
     path: C:/odw/sdk/convert
-    version: ^0.5.4
+    version: ^0.5.6
 
 dev_dependencies:
   benchmark_harness: ^1.0.4
