--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,33 @@
 name: io
 description: ODW input/output (files, network, etc.) package
-version: 0.6.0
+version: 0.6.5
 author: Jim Philbin <mailto:jfphilbin@gmail.com>
 
 homepage: https://github.com/OpenDICOMweb/io
 
 environment:
-  sdk: ^1.24.2
-
+  sdk: '>=1.24.2 <2.1.0'
 dependencies:
   args: any
   path: any
   dcm_convert:
     path: C:/odw/sdk/convert
-    version: ^0.6.3
+    version: ^0.6.5
+  dataset:
+    path: C:/odw/sdk/dataset
+    version: ^0.6.5
+  element:
+    path: C:/odw/sdk/element
+    version: ^0.6.5
+  entity:
+    path: C:/odw/sdk/entity
+    version: ^0.6.5
   timer:
     path: C:/odw/sdk/timer
-    version: ^0.6.0
+    version: ^0.6.1
   uid:
     path: C:/odw/sdk/uid
-    version: ^0.6.3
+    version: ^0.6.5
 
 dev_dependencies:
   benchmark_harness: ^1.0.4
