--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ homepage: https://github.com/OpenDICOMweb/io
 
 environment:
   sdk: '>=1.24.2 <2.1.0'
+
 dependencies:
   args: any
   path: any
@@ -24,22 +25,19 @@ dependencies:
     version: ^0.6.5
   timer:
     path: C:/odw/sdk/timer
-    version: ^0.6.1
+    version: ^0.6.5
   uid:
     path: C:/odw/sdk/uid
     version: ^0.6.5
 
 dev_dependencies:
   benchmark_harness: ^1.0.4
-  coverage: "^0.7.3"
-  dart_dev: "^1.0.0"
-  dart_style: ">=0.1.8 <0.3.0"
-  dartdoc: "^0.4.0"
-  grinder: ^0.8.0
-  test:  ^0.12.0
+  grinder: ^0.8.0+2
+  test:  ^0.12.24
   test_tools:
     path: C:/odw/sdk/test_tools
-    version: ^0.6.0
+    version: ^0.6.5
+  pub_semver: ^1.3.2
   yaml: ^2.1.12
 
 
