--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: io
 description: ODW input/output (files, network, etc.) package
-version: 0.6.5
+version: 0.7.0
 author: Jim Philbin <mailto:jfphilbin@gmail.com>
 
 homepage: https://github.com/OpenDICOMweb/io
@@ -11,33 +11,20 @@ environment:
 dependencies:
   args: any
   path: any
-  dcm_convert:
-    path: C:/odw/sdk/convert
-    version: ^0.6.5
-  dataset:
-    path: C:/odw/sdk/dataset
-    version: ^0.6.5
-  element:
-    path: C:/odw/sdk/element
-    version: ^0.6.5
-  entity:
-    path: C:/odw/sdk/entity
-    version: ^0.6.5
-  timer:
-    path: C:/odw/sdk/timer
-    version: ^0.6.5
-  uid:
-    path: C:/odw/sdk/uid
-    version: ^0.6.5
+  core:
+    path: C:/acr/odw/sdk/core
+    version: ^0.7.0
+  convert:
+    path: C:/acr/odw/sdk/convert
+    version: ^0.7.0
 
 dev_dependencies:
   benchmark_harness: ^1.0.4
   grinder: ^0.8.0+2
   test:  ^0.12.24
   test_tools:
-    path: C:/odw/sdk/test_tools
-    version: ^0.6.5
-  pub_semver: ^1.3.2
+    path: C:/acr/odw/test_tools
+    version: ^0.7.0
   yaml: ^2.1.12
 
 
