--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,9 @@ dependencies:
 
 
 dev_dependencies:
-  benchmark_harness: ^1.0.4
+  benchmark_harness: any
   grinder: ^0.8.0+2
-  test:  ^0.12.24
+  test:  any
   test_tools:
     path: C:/odw/test_tools
     version: ^0.7.0
