--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: io
+name: io_extended
 description: ODW input/output (files, network, etc.) package
 version: 0.7.0
 author: Jim Philbin <mailto:jfphilbin@gmail.com>
@@ -6,7 +6,7 @@ author: Jim Philbin <mailto:jfphilbin@gmail.com>
 homepage: https://github.com/OpenDICOMweb/io
 
 environment:
-  sdk: '>=1.24.2 <2.1.0'
+  sdk: '>=2.0.0-dev.1.0 <2.1.0'
 
 dependencies:
   args: any
@@ -14,15 +14,15 @@ dependencies:
   core:
     path: C:/odw/sdk/core
     version: ^0.7.2
-  convert:
-    path: C:/odw/sdk/convert
+  converter:
+    path: C:/odw/sdk/converter
     version: ^0.7.0
 
 
 dev_dependencies:
   benchmark_harness: ^1.0.4
-  grinder: ^0.8.0+2
-  test:  ^0.12.24
+  grinder: ^0.8.0
+  test:  any
   test_tools:
     path: C:/odw/test_tools
     version: ^0.7.0
